# data-architecture-gcp

.github/workflows/: ci-deploy-cloudfunctions-anac-oferta-demanda-aerea-basica.yml  ci-deploy-cloudfunctions-anac-oferta-demanda-aerea.yml  ci-deploy-cloudfunctions-anac-oferta-demanda-combinada.yml  ci-deploy-composer-dags.yml  ci-deploy-terraform-bigquery.yml  ci-deploy-terraform-cloud-storage.yml  ci-deploy-terraform-composer.yml  ci-deploy-terraform-iam.yml
cloudfunctions/: pyproject.toml
cloudfunctions/src/cf_extract_anac_oferta_demanda_aerea_basica_to_bronze/: var.sh
cloudfunctions/src/cf_extract_anac_oferta_demanda_aerea_basica_to_bronze/source_code/: config.yaml  main.py
cloudfunctions/src/cf_extract_anac_oferta_demanda_aerea_combinada_to_bronze/: var.sh
cloudfunctions/src/cf_extract_anac_oferta_demanda_aerea_combinada_to_bronze/source_code/: config.yaml  ingestion.py  main.py
cloudfunctions/src/cf_extract_anac_oferta_demanda_aerea_to_bronze/: var.sh
cloudfunctions/src/cf_extract_anac_oferta_demanda_aerea_to_bronze/source_code/: config.yaml  ingestion.py  main.py
composer/dags/: pipeline_anac_oferta_demanda_aerea.py
composer/plugins/alert/: slack.py
composer/plugins/soda/: configuration.yml  scan_operations.py
infra-as-code-terraform/1.iam/: iam_roles.tf
infra-as-code-terraform/2.cloud_storage/: main.tf
infra-as-code-terraform/4.composer/: .terraform.lock.hcl  main.tf  terraform.tfvars  variables.tf
infra-as-code-terraform/modules/composer_instance/: main.tf  variables.tf
(+4 files in other folders)
