[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Marcus <marcus.moura@ipnet.cloud>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.31.0"
google-cloud-storage = "^2.15.0"
unidecode = "^1.3.8"
loguru = "^0.7.2"
google-cloud-bigquery = "^3.18.0"
pandas = "^2.2.1"
ipykernel = "^6.29.3"
pyarrow = "^15.0.0"
pytz = "^2024.1"
openpyxl = "^3.1.2"
db-dtypes = "^1.2.0"
xlrd = "^2.0.1"
pyyaml = "^6.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
